--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,8 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
-banner: 'default'
+heading: 'Welcome! This is Yujin Kim :rocket:'
+subheading: 'Research note & Technical blog'
+banner: ""
 ---
 
 {{ content }}
